# ctools

./: .gitignore  README.md  __init__.py  ccopy.py  cdir.py  cgrep.py  ctools_mcp.py  pyproject.toml  requirements.txt
ctools/: cconnect.py  ccopy.py  cdir.py  cdu.py  crm.py  filterlib.py  lib.py  strategy.py
ctools/tests/: test_ccopy.py  test_cdir.py  test_cgrep.py  test_filterlib.py  test_lib.py
man/: ccopy.1  cdir.1  cdu.1  cgrep.1
tests/: test_cdu.py  test_ctools_mcp.py
