[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ctxttools"
version = "0.1.2"
description = "CLI tools for LLM conversations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.2.0"]
dev = ["pytest>=7.0.0"]

[project.scripts]
cdir = "ctools.cdir:app"
cgrep = "ctools.cgrep:app"
ccopy = "ctools.ccopy:app"
cdu = "ctools.cdu:app"
cconnect = "ctools.cconnect:app"
crm = "ctools.crm:app"
ctools-mcp = "ctools.ctools_mcp:main"

[tool.setuptools.packages.find]
include = ["ctools"]
